# test-api

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: items.json
src/: dynamodb.rs  lib.rs  localstack.rs  sqs_lambda_dynamodb.rs
src/data/: items.json
src/generator/: item.rs  mod.rs
test-api-macros/: Cargo.toml
test-api-macros/src/: lib.rs
tests/: dynamodb.rs  integration.rs  localstack.rs  sqs_lambda_dynamodb.rs
