[package]
name = "test-api"
version = "0.1.0"
edition = "2024"

[dependencies]
item-core = { git = "https://github.com/blitzfilter/item-core", branch = "main" }
aws-config = { version = "1.6.1"}
aws-sdk-dynamodb = { version = "1.71.1" }
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
serde_json = { version = "1.0.140" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
testcontainers = { version = "0.23.3" }
testcontainers-modules = { version = "0.11.6", features = ["localstack"] }

test-api-macros = { path = "test-api-macros" }

once_cell = "1.21.3"

[dev-dependencies]
serial_test = "3.2.0"