[package]
name = "test-api"
version = "0.1.0"
edition = "2024"

[dependencies]
item-core = { git = "https://github.com/blitzfilter/item-core", branch = "main" }
aws-config = { version = "1.6.2" }
aws-sdk-lambda = { version = "1.81.0" }
aws-sdk-dynamodb = { version = "1.74.0" }
aws-sdk-sqs = { version = "1.67.0" }
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
serde_json = { version = "1.0.140" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
testcontainers = { version = "0.24.0" }
testcontainers-modules = { version = "0.12.0", features = ["localstack"] }
test-api-macros = { path = "test-api-macros" }
strum = "0.27.1"
rand = "0.9.1"
uuid = { version = "1.16.0", features = ["v4"] }
time = { version = "0.3.41", features = ["formatting", "parsing"] }
lipsum = "0.9.1"
serial_test = "3.2.0"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
tracing = "0.1.41"

[dev-dependencies]
